testdata/golden/sema/invalid/builtin_type_mismatch_arith.fmt
// scenario: arithmetic with incompatible operand types
fn bad_addition() -> int {
    let bad: int = 1 + "one";
    return bad;
}
